--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^3.2.0",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
+    "next-intl": "^3.14.0",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.41",
